# RoboWalker-OpenCV-Training

./: README.md
codes/: CMakeLists.txt
codes/10_BoundingRect/: README.md
codes/11_SVM/: README.md
codes/12_CNN_numbers/: README.md
codes/1_ImageLightness/: README.md  main.cpp
codes/2_Filters/: README.md
codes/3_Eroding_Dilating/: CMakeLists.txt  README.md  main.cpp
codes/4_Morphology/: README.md  main.cpp
codes/5_ImageSampling/: README.md
codes/6_Segment/: CMakeLists.txt  README.md
codes/7_EdgeDetect/: README.md
codes/8_LineDetect/: README.md
codes/9_AffineMapping/: README.md
codes/Eroding_Dilating/: main.cpp
codes/Filters/: CMakeLists.txt  README.md  main.cpp
