cmake_minimum_required(VERSION 3.16)
project(OpenCV_Training)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(1_ImageLightness)
add_subdirectory(2_Filters)
add_subdirectory(3_Eroding_Dilating)
add_subdirectory(4_Morphology)
add_subdirectory(5_ImageSampling)
add_subdirectory(6_Segment)
add_subdirectory(7_EdgeDetect)
add_subdirectory(8_LineDetect)
add_subdirectory(9_AffineMapping)
add_subdirectory(10_BoundingRect)
add_subdirectory(11_SVM)
add_subdirectory(12_CNN_numbers)